Enchanted Keyfinder (EK) Changelog
Build 0.1.0.290 Beta 5 -- February 17th, 2011
----------------------------------
1.	Added MS Office product description derived from the GUID.
	Affects Office 2000 through Office 2010.
2.	Fixed Office 2010 CD Key misreporting.
3.	Fixed browsing for a hive in WinPE environment.
4.	Updated all the links for the new project page.
5.	Updated command line switch documentation.
6.	Checks if running as administrator token.
7.	Added Save as HTML and Save as ini.  Command line switches /saveini
	and /savehtml also added.
8.	Compiles in Delphi 7 now.

Build 0.1.0.260 Beta 4 -- January 21st, 2011
----------------------------------
1.	Added support for retrieving Microsoft Office 2010 installation
	key.
2.	Added update support for live downloading of unstable versions.
	Falls back to to giving the user the option to manually download
	it.
3.	Enhanced downloading of the keyfinder.cfg.  If it fails it falls
	back to giving the user the option to manually download it.
4.	Fixed bug #3163261 Load Hive doesn't work.  Now it works more
	reliably.
5.	Fixed a minor UI bug when pressing cancel after clicking Load Hive
	menu.  Hive status messages did not go away.

Build 0.1.0.209 Beta 3 -- January 20th, 2011
----------------------------------
1.	Added icons to the menus.
2.	Implmented online updates to ease the process of checking for a new
	version.

Build 0.1.0.142 Beta 2 -- January 18th, 2011
----------------------------------
1.	Added Refresh to File menu for when users are testing config file.
2.	Updated feature: Modified the XP change product key feature so you 
	don't have to restart keyfinder to see the updated key.
3.	Updated About dialog with new logo and information.
4.	Fixed bug where EK would fail from invalide data type when reading 
	strings from the registry.  This would cause an incomplete list of 
	found keys.
5.	Fixed bug where programs with blank keys, such as Half-Life, would 
	show up even when it is not installed.