@@ -50,25 +50,23 @@ type
     Button3: TButton;
     Label2: TLabel;
     Label3: TLabel;
-    ButOptRestDef: TButton;
     Label4: TLabel;
     EdtCSV1: TEdit;
     OptChkBxErrLog: TCheckBox;
-    OptChkBxSave: TCheckBox;
     OptFontBox1: TGroupBox;
     LblAppList: TLabel;
     LblKeyDisp: TLabel;
     Button5: TButton;
     EdtLogPath: TEdit;
+    OptUnstableUpdates: TCheckBox;
+    procedure OptUnstableUpdatesClick(Sender: TObject);
     procedure Button1Click(Sender: TObject);
     procedure FormClose(Sender: TObject; var Action: TCloseAction);
     procedure FormCreate(Sender: TObject);
     procedure Button2Click(Sender: TObject);
     procedure Button3Click(Sender: TObject);
-    procedure ButOptRestDefClick(Sender: TObject);
     procedure Button5Click(Sender: TObject);
     procedure OptChkBxErrLogClick(Sender: TObject);
-    procedure OptChkBxSaveClick(Sender: TObject);
   private
     { Private declarations }
   public
@@ -90,7 +88,6 @@ begin
   frmMain.FontDialog.Font := frmMain.ListBox1.Font;
   frmMain.FontDialog.Execute;
   frmMain.ListBox1.Font := frmMain.FontDialog.Font;
-  //Button1.Font := frmMain.ListBox1.Font;
   LblAppList.Font := frmMain.ListBox1.Font;
 end;
 
@@ -105,17 +102,14 @@ begin
   LblAppList.Font := frmMain.ListBox1.Font;
   Label3.Font     := frmMain.Memo1.Font;
   LblKeyDisp.Font := frmMain.Memo1.Font;
-  {SetFont1(frmMain.ListBox1.Font);
-  SetFont2(frmMain.Memo1.Font);}
   LblAppList.Font := frmMain.ListBox1.Font;
   LblKeyDisp.Font := frmMain.Memo1.Font;
-  //Button1.Font := frmMain.ListBox1.Font;
-  //Button2.Font := frmMain.Memo1.Font;
   EdtCSV1.Text     := frmMain.sDelimCSV;
   EdtLogPath.Text := sLogFilePath;
   OptChkBxErrLog.Checked := bLogging;
   Button5.Enabled := OptChkBxErrLog.Checked;
   EdtLogPath.Enabled := OptChkBxErrLog.Checked;
+  OptUnstableUpdates.Checked := followUnstable;
 
 end;
 
@@ -125,23 +119,12 @@ begin
   frmMain.FontDialog.Execute;
   frmMain.Memo1.Font := frmMain.FontDialog.Font;
   LblKeyDisp.Font  := frmMain.Memo1.Font;
-  //Button2.Font := frmMain.Memo1.Font;
 end;
 
 procedure TfrmOptions.Button3Click(Sender: TObject);
-{var
-  MyINI: TINIFile;}
 begin
-  bSaveSettings := OptChkBxSave.Checked;
-  {SaveFont1(Button1.Font);
-  SaveFont2(Button2.Font);}
-  {try
-    myINI := TINIFile.Create(ChangeFileExt(Application.ExeName, '.ini'));
-    SaveFont(myINI, 'AppListFont', frmMain.ListBox1.Font);
-    SaveFont(myINI, 'KeyListFont', frmMain.Memo1.Font);
-  finally
-    myINI.Free;
-  end;     }
+  bSaveSettings := True;
+
   if EdtCSV1.Text = '"' then
   begin
     Application.MessageBox('You can''t use a double quote as a delimiter.', 'CSV Note');
@@ -172,119 +155,9 @@ begin
   bLogging := OptChkBxErrLog.Checked;
 end;
 
-procedure TfrmOptions.OptChkBxSaveClick(Sender: TObject);
+procedure TfrmOptions.OptUnstableUpdatesClick(Sender: TObject);
 begin
-  bSaveSettings := OptChkBxSave.Checked; 
+  followUnstable := OptUnstableUpdates.Checked;
 end;
-
-procedure TfrmOptions.ButOptRestDefClick(Sender: TObject);
-//var
-  //MyINI: TINIFile;
-begin
-  frmMain.ListBox1.Font := Label2.Font;
-  frmMain.Memo1.Font    := Label3.Font;
-  {SaveFont1(frmMain.ListBox1.Font);
-  SaveFont2(frmMain.Memo1.Font);}
-  {try
-    myINI := TINIFile.Create(ChangeFileExt(Application.ExeName, '.ini'));
-    SaveFont(myINI, 'AppListFont', frmMain.ListBox1.Font);
-    SaveFont(myINI, 'KeyListFont', frmMain.Memo1.Font);
-  finally
-    myINI.Free;
-  end;    }
-  frmOptions.FormCreate(frmOptions);
-  EdtCSV1.Text     := DefDelimCSV;
-  EdtLogPath.Text := DefLogPath;
-  OptChkBxErrLog.Checked := False;
-  OptChkBxSave.Checked := False;
-  frmOptions.OptChkBxErrLogClick(frmOptions);
-end;
-
-//old method for storing font settings.
-//kept for archive purposes, do not reinstate
-//keyfinder should remain portable
-{function SaveFont1(F_Font: TFont): boolean;
-var
-  FontInfo: Windows.TLogFont; // font definition structure
-  MyReg: TRegistry;
-begin
-  GetObject(F_Font.Handle, SizeOf(FontInfo), @FontInfo);
-  MyReg := TRegistry.Create;
-  MyReg.RootKey := HKEY_CURRENT_USER;
-  try
-    MyReg.OpenKey('Software\Enchanted Keyfinder\Keyfinder', True);
-    MyReg.WriteBinaryData('Font1', FontInfo, SizeOf(FontInfo));
-    Result := True;
-  finally
-    MyReg.Free;
-  end;
-end;}
-
-{function SetFont1(F_Font: TFont): boolean;
-var
-  FontInfo: Windows.TLogFont; // font definition structure
-  MyReg: TRegistry;
-  NewFHnd: HFONT;
-begin
-  Result := False;
-  MyReg := TRegistry.Create;
-  MyReg.RootKey := HKEY_CURRENT_USER;
-  try
-    if MyReg.OpenKey('Software\Enchanted Keyfinder\Keyfinder', False) and
-      MyReg.ValueExists('Font1') then
-    begin
-      MyReg.ReadBinaryData('Font1', FontInfo, SizeOf(FontInfo));
-      //set Font to the retrieved font
-      NewFHnd := CreateFontIndirect(FontInfo);
-      Result  := (NewFHnd <> 0);
-      if Result then
-        F_Font.Handle := NewFHnd;
-    end;
-  finally
-    MyReg.Free;
-  end;
-end;}
-
-{function SaveFont2(F_Font: TFont): boolean;
-var
-  FontInfo: Windows.TLogFont; // font definition structure
-  MyReg: TRegistry;
-begin
-  GetObject(F_Font.Handle, SizeOf(FontInfo), @FontInfo);
-  MyReg := TRegistry.Create;
-  MyReg.RootKey := HKEY_CURRENT_USER;
-  try
-    MyReg.OpenKey('Software\Enchanted Keyfinder\Keyfinder', True);
-    MyReg.WriteBinaryData('Font2', FontInfo, SizeOf(FontInfo));
-    Result := True;
-  finally
-    MyReg.Free;
-  end;
-end;}
-
-{function SetFont2(F_Font: TFont): boolean;
-var
-  FontInfo: Windows.TLogFont; // font definition structure
-  MyReg:   TRegistry;
-  NewFHnd: HFONT;
-begin
-  Result := False;
-  MyReg := TRegistry.Create;
-  MyReg.RootKey := HKEY_CURRENT_USER;
-  try
-    if MyReg.OpenKey('Software\Enchanted Keyfinder\Keyfinder', False) and
-      MyReg.ValueExists('Font2') then
-    begin
-      MyReg.ReadBinaryData('Font2', FontInfo, SizeOf(FontInfo));
-      //set Font to the retrieved font
-      NewFHnd := CreateFontIndirect(FontInfo);
-      Result  := (NewFHnd <> 0);
-      if Result then
-        F_Font.Handle := NewFHnd;
-    end;
-  finally
-    MyReg.Free;
-  end;
-end;}
 
 end.
